fixed text spacing and centered countdown

--- a/main.css
+++ b/main.css
@@ -33,10 +33,16 @@ html, body {
     font-family: Libre Franklin;
     font-size: 16px;
     margin-top: 20px;
+    margin-right: 32px;
+
+    align-self: center;
+    line-height: 16px;
 }
 
 .hero {
    height: 100vh;
+   /* width: 866.85px;
+    height: 1136.96px; */
 }
 
 .text1 {
@@ -46,7 +52,7 @@ html, body {
     font-size: 40px;
     line-height: 42px;
 
-    margin-bottom: 50px;
+    margin-bottom: 16px;
     margin-left: 117.24px;
 
     width: 463px;
@@ -61,7 +67,7 @@ html, body {
     font-size: 32px;
     line-height: 32px;
 
-    margin-bottom: 48px;
+    margin-bottom: 43px;
     margin-left: 117.24px;
     
     width: 482px;
@@ -76,13 +82,15 @@ html, body {
     font-size: 24px;
     line-height: 120%;
 
-    margin-bottom: 31px;
+    margin-bottom: 24px;
     margin-left: 117.24px;
 
     color: #2E271D;
 }
 
-button.btn {
+/* Button Focus State */
+
+a.btn {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -94,7 +102,7 @@ button.btn {
     left: 117px;
     top: 637px;
 
-    background: #4E5B27;
+    background: #7E9048;
     border-radius: 8px;
 
     font-family: 'Libre Franklin', sans-serif;
@@ -111,17 +119,30 @@ button.btn {
     color: #FFFFFF;
 }
 
+a.btn:focus {
+    background-color: #4E5B27;
+    color: #FFFFFF;
+}
+
+a.btn:hover{
+    background-color: #4E5B27;
+    color: #FFFFFF; 
+}
+
 
 /* COUNT DOWN */
 
-.box {
-    border-style:solid; 
-    padding: 5px ;
+.box { 
+    width: 48px;
+    height: 48px;
     float: left;
-    margin: 5px;
-    border-radius: 10px;
+    margin-right: 16px;
+    border-radius: 4px;
 
     font-size:24px;
+    line-height: 48px;
+    text-align: center;
+    align-self: center;
 
     color: #2E271D;
     background: #FDFAF3;
